replication switch api
